svg icon ios bugfix

--- a/src/modules/postsList/postsList.css
+++ b/src/modules/postsList/postsList.css
@@ -18,6 +18,8 @@ postsList module
 }
 
 [i-postsList-yearMark-icon] {
+    /* block needed as bugfix for iOS */
+    display: block;
     width: var(--s-leading);
     height: var(--s-leading);
 }
